[package]
name = "yosys-netlist-json"
version = "0.0.4"
authors = ["R <rqou@berkeley.edu>"]
license = "0BSD"
description = "A library for working with Yosys netlists in JSON format"
repository = "https://github.com/rqou/yosys-netlist-json"
keywords = ["json", "netlist", "yosys", "eda"]
categories = ["parser-implementations"]
edition = "2021"

[dependencies]
slog = "2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[profile.release]
lto = true

[lib]
name = "yosys_netlist_json"
crate-type = ["rlib"]
