[package]
name = "yosys-netlist-json"
version = "0.2.0"
authors = ["R <rqou@berkeley.edu>"]
license = "0BSD"
description = "A library for working with Yosys netlists in JSON format"
repository = "https://github.com/rqou/yosys-netlist-json"
keywords = ["json", "netlist", "yosys", "eda"]
categories = ["parser-implementations"]
edition = "2021"

[features]
default = ["slog"]

[dependencies]
slog = { version = "2", optional = true }
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
indexmap = {version = "2.0.0", features = ["serde"]}

[profile.release]
lto = true

[lib]
name = "yosys_netlist_json"
crate-type = ["rlib"]
